[project]
name = "YANC_LMStudio"
description = "A custom node for a LMStudio integration into ComfyUI."
version = "1.2.0"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/ALatentPlace/YANC_LMStudio"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "alatentplace"
DisplayName = "YANC_LMStudio"
Icon = ""
